--- a/deployment/voicemail-for-amazon-connect.template
+++ b/deployment/voicemail-for-amazon-connect.template
@@ -12,7 +12,7 @@
 # specific language governing permissions and limitations under the License.
 #
 ##
-
+ 
 # Serverless Limit Monitor Solution
 #
 # template for voicemail-for-amazon-connect
@@ -20,14 +20,14 @@
 #
 # author: aws-solutions-builder@
 AWSTemplateFormatVersion: 2010-09-09
-
+ 
 Description: (SO0094) - Solution - Master Template - This template creates all the necessary resources to enable voicemail capabilities to your Amazon Connect Instance
-
+ 
 Parameters:
     AmazonConnectInstanceId:
-      Default: ""
       Type: String
       Description: Your Amazon Connect Instance Id
+      AllowedPattern: ^([0-9a-f]){8}-([0-9a-f]){4}-([0-9a-f]){4}-([0-9a-f]){4}-([0-9a-f]){12}$
     AvailableSMSCountries:
       Default: "us,ca"
       Type: String
@@ -61,17 +61,22 @@ Parameters:
       Default: ""
       Type: String
       Description: Transcription delivery email. Make sure this email is verified by Amazon Simple Email Service
-
+ 
     RecordingsUrlExpirationTime:
       Default: 900
       Type: String
       Description: The amount of time the encrypted url for audio recording should be valid for before it expires (seconds).
-
+    IsSamlInstance:
+      Description: Set to true if you are using Saml for your Amazon Connect instance.
+      Default: false
+      Type: String
+      AllowedValues: [true, false]
+ 
     UserPoolDomainPrefix:
       Type: String
       Description: Domain prefix to assign to the cognito user pool. This must be unique.
       AllowedPattern: ^[a-z0-9](?:[a-z0-9\\-]{0,61}[a-z0-9])?$
-
+ 
 Metadata:
     AWS::CloudFormation::Interface:
       ParameterGroups:
@@ -80,6 +85,7 @@ Metadata:
           Parameters:
             - AmazonConnectInstanceId
             - RecordingsUrlExpirationTime
+            - IsSamlInstance
         - Label:
             default: Voicemail Web Portal Configurations
           Parameters:
@@ -112,18 +118,20 @@ Metadata:
           default: Manager Last Name
         AvailableSMSCountries:
           default: Allowable SMS Countries
-
+        IsSamlInstance:
+          default: Is Saml Instance
+ 
 Mappings:
   MetricsMap:
     Send-Data:
-      SendAnonymousData: "Yes" # change to 'No' if needed
-
+      SendAnonymousData: "true" # change to 'false' if needed
+ 
   SourceCode:
     General:
       S3Bucket: %%BUCKET_NAME%%
       KeyPrefix: "%%SOLUTION_NAME%%/%%VERSION%%"
       SolutionId: "SO0094"
-      
+     
 Resources:
     CopyLambdaArtifactsStack:
       Type: AWS::CloudFormation::Stack
@@ -183,6 +191,8 @@ Resources:
         ]
         Parameters:
           ServerlessDeploymentBucket: !GetAtt CopyLambdaArtifactsStack.Outputs.LambdaArtifactsBucket
+          LambdaDeploymentJarPackageVersion: !GetAtt CopyLambdaArtifactsStack.Outputs.LambdaDeploymentJarPackageId
+          LambdaDeploymentZipPackageVersion: !GetAtt CopyLambdaArtifactsStack.Outputs.LambdaDeploymentZipPackageId
           AmazonConnectInstanceArn: !Sub 'arn:aws:connect:${AWS::Region}:${AWS::AccountId}:instance/${AmazonConnectInstanceId}'
           AvailableSMSCountries: !Ref AvailableSMSCountries
           AdminEmail: !Ref AdminEmail
@@ -201,6 +211,12 @@ Resources:
                 ]
           Uuid: !GetAtt SolutionUuid.UUID
           VoicemailAccessLogBucket: !Ref VoicemailAccessLogBucket
+          IsSamlInstance: !Ref IsSamlInstance
+          SendAnonymousData: !FindInMap [
+                              "MetricsMap",
+                              "Send-Data",
+                              "SendAnonymousData"
+                            ]
     VoicemailPortalStack:
       Type: AWS::CloudFormation::Stack
       DependsOn: VoicemailStack
@@ -256,7 +272,7 @@ Resources:
           PortalBucket: !Ref PortalBucket
           PortalBucketDomainName: !GetAtt PortalBucket.DomainName
           PortalBucketArn: !GetAtt PortalBucket.Arn
-
+ 
     PortalBucket:
       Type: AWS::S3::Bucket
       Properties:
@@ -282,14 +298,14 @@ Resources:
           rules_to_suppress:
           - id: W51
             reason: Bucket policy added in sub template once CloudFront Domain is created
-
+ 
     AccessLogBucketPolicy:
       Type: AWS::S3::BucketPolicy
       Properties:
         Bucket: !Ref VoicemailAccessLogBucket
         PolicyDocument:
-          Statement: 
-            - Action: 
+          Statement:
+            - Action:
                 - "s3:GetObject"
               Effect: "Deny"
               Resource: !Sub 'arn:aws:s3:::${VoicemailAccessLogBucket}/*'
@@ -297,7 +313,7 @@ Resources:
               Condition:
                 Bool:
                   'aws:SecureTransport': 'false'
-
+ 
     VoicemailAccessLogBucket:
       Type: AWS::S3::Bucket
       Properties:
@@ -318,7 +334,7 @@ Resources:
           rules_to_suppress:
           - id: W35
             reason: Used to store access logs for other buckets
-
+ 
     SolutionHelperRole:
       Type: AWS::IAM::Role
       Properties:
@@ -370,7 +386,7 @@ Resources:
                     - "apigateway:GET"
                   Resource:
                     - !Sub "arn:aws:apigateway:${AWS::Region}::/apikeys/*"
-
+ 
     SolutionHelperFunction:
       Type: AWS::Lambda::Function
       Properties:
@@ -399,7 +415,7 @@ Resources:
         Role: !GetAtt SolutionHelperRole.Arn
         Runtime: nodejs10.x
         Timeout: 300
-
+ 
     SolutionUuid:
       Type: "Custom::LoadLambda"
       Properties:
