--- a/deployment/aws-connect-vm.template
+++ b/deployment/aws-connect-vm.template
@@ -146,6 +146,43 @@
         "GetAgentByExtensionIamRole"
       ]
     },
+    "AgentsGetByIdInWorkflowLambdaFunction": {
+      "Type": "AWS::Lambda::Function",
+      "Properties": {
+        "Code": {
+          "S3Bucket": {
+            "Ref": "ServerlessDeploymentBucket"
+          },
+          "S3Key": "aws-connect-vm-serverless/aws-connect-vm.zip",
+          "S3ObjectVersion": {
+            "Ref": "LambdaDeploymentZipPackageVersion"
+          }
+        },
+        "Handler": "handler/agents.getAgentByIDInWorkflow",
+        "MemorySize": 1024,
+        "Role": {
+          "Fn::GetAtt": [
+            "AgentsGetByIdIamRole",
+            "Arn"
+          ]
+        },
+        "Runtime": "nodejs10.x",
+        "Timeout": 30,
+        "Environment": {
+          "Variables": {
+            "USERS_TABLE_NAME": {
+              "Ref": "UsersTable"
+            },
+            "AMAZON_CONNECT_INSTANCE_ARN": {
+              "Ref": "AmazonConnectInstanceArn"
+            }
+          }
+        }
+      },
+      "DependsOn": [
+        "AgentsGetByIdIamRole"
+      ]
+    },
     "CognitoUsersConfigLambdaFunction": {
       "Type": "AWS::Lambda::Function",
       "Properties": {
