S3 regional domain name value to support non us-east-1 deployments #47

--- a/deployment/voicemail-for-amazon-connect.template
+++ b/deployment/voicemail-for-amazon-connect.template
@@ -270,7 +270,7 @@ Resources:
           UserPoolArn: !GetAtt VoicemailStack.Outputs.UserPoolArn
           SolutionHelperFunctionArn: !GetAtt SolutionHelperFunction.Arn
           PortalBucket: !Ref PortalBucket
-          PortalBucketDomainName: !GetAtt PortalBucket.DomainName
+          PortalBucketDomainName: !GetAtt PortalBucket.RegionalDomainName
           PortalBucketArn: !GetAtt PortalBucket.Arn
  
     PortalBucket:
